--- a/packages/solid-demo-fe/package.json
+++ b/packages/solid-demo-fe/package.json
@@ -20,6 +20,7 @@
     "@suid/icons-material": "^0.5.11",
     "@suid/material": "^0.11.1",
     "@suid/vite-plugin": "^0.1.2",
+    "@tanstack/solid-query": "^4.29.1",
     "normalize.css": "^8.0.1",
     "solid-js": "^1.4.2"
   }
