--- a/packages/solid-demo-fe/package.json
+++ b/packages/solid-demo-fe/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "sass": "^1.62.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
@@ -21,6 +22,7 @@
     "@suid/material": "^0.11.1",
     "@suid/vite-plugin": "^0.1.2",
     "normalize.css": "^8.0.1",
-    "solid-js": "^1.4.2"
+    "solid-js": "^1.4.2",
+    "uuid": "^9.0.0"
   }
 }
