--- a/packages/solid-demo-fe/package.json
+++ b/packages/solid-demo-fe/package.json
@@ -23,6 +23,7 @@
     "@suid/vite-plugin": "^0.1.2",
     "@tanstack/solid-query": "^4.29.1",
     "normalize.css": "^8.0.1",
+    "solid-forms": "^0.4.8",
     "solid-js": "^1.4.2",
     "solid-slider": "^1.3.12",
     "uuid": "^9.0.0"
