--- a/packages/solid-demo-be/package.json
+++ b/packages/solid-demo-be/package.json
@@ -41,6 +41,7 @@
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.23",
     "medusa-payment-stripe": "^2.0.0",
+    "medusa-plugin-wishlist": "^1.1.43",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
